EditMap add animation to 'woring in background' + prevent flickering

--- a/code13/app/client/mgb.css
+++ b/code13/app/client/mgb.css
@@ -313,8 +313,11 @@ body.dragging .accept-drop:hover{
   z-index: 1;
   top: 12px; /* move down as overflow hides top of */
   transition: 1s;
+  opacity: 0;
 }
-
+.loading-notification.show{
+  opacity: 1
+}
 .ui.card.animated.fadeIn:hover{
   position: relative;
   z-index: 1;
